# Axon-OS

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .shellcheckrc  AGENTS.md  Dockerfile  LICENSE  README.md  benchmark.py  benchmark_sqlite.py  docker-compose.yml  install.sh  pyproject.toml  requirements-dev.txt  requirements.txt  ruff.toml
.github/workflows/: build-iso.yml  build.yml  ci.yml
.jules/: bolt.md
.mimocode/skills/iso-build-test/: SKILL.md
.mimocode/skills/new-service/: SKILL.md
Axon-OS/: Dockerfile  README.md  install.sh
Axon-OS/apps/axon-files/: file_indexer.py  main.css  main.py  ui.py
Axon-OS/apps/axon-settings/: __init__.py  main.css  main.py
Axon-OS/apps/axon-terminal/: main.py  terminal_widget.py
Axon-OS/apps/axon-welcome/: __init__.py  main.py
Axon-OS/apps/axon-welcome/ui/: __init__.py
Axon-OS/apps/intent-bar/: main.py  spaces_manager.py
Axon-OS/apps/intent-bar/ui/: window.py
Axon-OS/data/applications/: axon-ai-panel.desktop  axon-intent-bar.desktop  axon-settings.desktop  axon-terminal.desktop  axon-welcome.desktop
Axon-OS/docs/: building.md  contributing.md
Axon-OS/installer/: settings.conf
Axon-OS/installer/branding/axon/: AxonSlideshow.qml  branding.desc
Axon-OS/installer/modules/: finished.conf  welcome.conf
Axon-OS/plymouth/axon-splash/: axon.script
Axon-OS/screenshots/: generate_preview.py
Axon-OS/services/axon-brain/: axon-brain.service  brain_service.py  conversation_store.py  hardware_profiler.py  org.axonos.Brain.conf  org.axonos.Brain.service
Axon-OS/services/axon-context/: axon-context.service  context_service.py  org.axonos.Context.conf
Axon-OS/shell/axon-shell/: extension.js  intentbar.js  metadata.json
Axon-OS/shell/axon-shell/schemas/: org.gnome.shell.extensions.axon-shell.gschema.xml
Axon-OS/tests/: test_services.py
Axon-OS/theme/axon-gtk/: gtk-dark.css  index.theme
Axon-OS/theme/axon-icons/: index.theme
apps/axon-ai-panel/: context_reader.py  main.py
apps/axon-ai-panel/ui/: panel.py
apps/axon-files/: __init__.py  file_indexer.py  main.py  ui.py
apps/axon-installer/: install_engine.py
apps/axon-settings/: main.py  settings_executor.py
apps/axon-terminal/: __init__.py  ai_helper.py  main.css  main.py  terminal_widget.py
apps/axon-voice-overlay/: main.py
apps/axon-welcome/: main.py
apps/axon-welcome/ui/: welcome.py
apps/intent-bar/: ollama_client.py
apps/intent-bar/ui/: window.py
data/applications/: axon-files.desktop  axon-intent-bar.desktop  axon-winabi-exe-handler.desktop  axon-winabi-run-exe.desktop
data/mime/: axon-winabi-exe.xml
data/polkit/: org.axonos.winabi.policy
docs/: architecture.md  building.md
installer/: __init__.py  axon-installer.py  partitioner.py
installer/branding/axon/: branding.desc  generate_branding.py
installer/modules/: packages.conf  removeuser.conf  unpackfs.conf  users.conf
kernel/axon-winabi/: .axon-winabi.ko.cmd  .axon-winabi.mod.cmd  .axon-winabi.mod.o.cmd  .axon-winabi.o.cmd  .binfmt_win.o.cmd  .module-main.o.cmd  .modules.order.cmd  .nt-dll-loader.o.cmd  .nt-registry.o.cmd  .nt-section.o.cmd  .nt-sync.o.cmd  .nt-syscalls.o.cmd  .nt-thread.o.cmd  .pe-loader.o.cmd  .syscall_table.o.cmd  Makefile  axon-winabi-test.c  axon-winabi.h  binfmt_win.c  module-main.c  nt-dll-loader.c  nt-registry.c  nt-section.c  nt-sync.c  nt-syscalls.c  nt-thread.c  pe-loader.c  syscall_table.c
kernel/axon-winabi/dlls/: advapi32.c  d3d11.c  d3d12.c  d3d9.c  dinput.c  dxgi.c  gdi32.c  kernel32.c  ntdll.c  shell32.c  user32.c  wasapi.c  xinput.c
kernel/axon-winabi/tests/: Makefile  hello.c  hello_nt.c
plymouth/axon-splash/: axon.plymouth  generate_logo.py
screenshots/: generate_preview.py
scripts/: axon-winabi-run  axon-winabi-sandbox  bump_version.py  qa.sh  upload-iso.sh
services/: _log_helper.py  i18n.py  plugin_registry.py  service_utils.py  telemetry.py
services/axon-brain/: axon-brain.service  brain_service.py  conversation_store.py  hardware_profiler.py  model_marketplace.py  org.axonos.Brain.service
services/axon-context/: axon-context.service  context_service.py  file_indexer.py  org.axonos.Context.service
services/axon-gui-agent/: axon-gui-agent.service  gui_agent_service.py  plan.py
services/axon-sandbox/: audit.py  audit_v2.py  sandbox_manager.py  shield.py
services/axon-search/: axon-search.service  indexer.py  org.axonos.Search.conf  org.axonos.Search.service  search_service.py
services/axon-voice/: advanced_voice_service.py  axon-voice.service  intent_router.py  overlay.py  vad_helper.py  voice_service.py
services/plugins/sample-plugin/: sample_service.py
shell/axon-shell/: dock.js  extension.js  intentbar.js  metadata.json  spaces.js  startmenu.js  stylesheet.css
system/: axon-updater.py
tests/: conftest.py  test_conversation_store.py  test_hardware_profiler.py  test_innovations.py  test_sandbox_manager_extended.py  test_search_service.py  test_services.py  test_services_enhanced.py  test_settings_executor.py
theme/axon-gtk/: gtk-dark.css
theme/wallpapers/: generate_wallpaper.py
