[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "axon-os"
version = "0.3.0"
description = "Axon OS - A futuristic, AI-powered Linux desktop environment"
readme = "README.md"
license = {text = "GPL-3.0-or-later"}
authors = [
    {name = "Axon Team", email = "team@axon-os.local"}
]
keywords = ["linux", "desktop", "ai", "gnome", "gtk"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: X11 Applications :: GTK",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Desktop Environment",
]
requires-python = ">=3.10"

dependencies = [
    "dbus-python>=1.3.2",
    "PyGObject>=3.48.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
    "PyGObject-stubs>=2.10",
    "black>=23.9.0",
    "pre-commit>=3.3.0",
]

[project.urls]
Homepage = "https://github.com/kaorii-ako/Axon-OS"
Repository = "https://github.com/kaorii-ako/Axon-OS"
Documentation = "https://github.com/kaorii-ako/Axon-OS/blob/main/docs/"
Issues = "https://github.com/kaorii-ako/Axon-OS/issues"

[tool.setuptools]
packages = ["apps", "services", "installer"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B", "C4", "RUF", "D", "N", "PT", "SIM", "LOG"]
ignore = ["E501", "E402", "D100", "D104"]

[tool.ruff.lint.isort]
known-first-party = ["apps", "services", "installer"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]
exclude = '''
/(
    \.git
  | \.venv
  | build
  | dist
  | \.eggs
  | .*\.egg-info
)/
'''

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_incomplete_defs = true
disallow_untyped_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
plugins = [
    "mypy_dbus_python_plugin",
]

[[tool.mypy.overrides]]
module = ["gi.*", "dbus.*"]
ignore_missing_imports = true
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
exclude = ["tests/", "build/", "dist/"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--verbose --strict-markers"
markers = [
    "slow: marks tests as slow",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]
